feat: add clients-slider

--- a/index.html
+++ b/index.html
@@ -811,19 +811,19 @@
                     <div class="about__awards">
                         <ul class="awards__inner d-flex flex-wrap justify-content-between">
                             <li class="award-item d-flex-start-center gap-2">
-                                <img src="/assets/svg/win-1.svg" alt="Знак победителя" class="award-item__img">
+                                <img src="/assets/svg/win-1.svg" alt="Знак победителя" class="award-item__img" width="60" height="60">
                                 <p class="award-item__text">Дважды лауреаты премии Лидеры Туриндустрии</p>
                             </li>
                             <li class="award-item d-flex-start-center gap-2">
-                                <img src="/assets/svg/win-2.svg" alt="Знак победителя" class="award-item__img">
+                                <img src="/assets/svg/win-2.svg" alt="Знак победителя" class="award-item__img" width="60" height="60">
                                 <p class="award-item__text">Информационный партнер выставок MITT 2012–2025, Крым-сезон, Анапа Самое Яркое Солнце</p>
                             </li>
                             <li class="award-item d-flex-start-center gap-2">
-                                <img src="/assets/svg/win-3.svg" alt="Знак победителя" class="award-item__img">
+                                <img src="/assets/svg/win-3.svg" alt="Знак победителя" class="award-item__img" width="60" height="60">
                                 <p class="award-item__text"><span class="award-subtitle">ТОП 3</span><br>Рейтинг разработчиков сайтов туристической тематики</p>
                             </li>
                             <li class="award-item d-flex-start-center gap-2">
-                                <img src="/assets/svg/win-4.svg" alt="Знак победителя" class="award-item__img">
+                                <img src="/assets/svg/win-4.svg" alt="Знак победителя" class="award-item__img" width="60" height="60">
                                 <p class="award-item__text"><span class="award-subtitle">ТОП 2</span><br>Рейтинг digital-агентств, работающих с крупнейшими туристическими компаниями</p>
                             </li>
                         </ul>
@@ -1154,7 +1154,7 @@
                             <div class="portfolio-tabs__cards">
                                 <a href="#" class="1 link-action portfolio-card" data-category="hotel">
                                     <div class="portfolio-card__img">
-                                        <img src="/assets/images/portfolio-1.webp" alt="Сайт отеля «Таёжник»" loading="lazy">
+                                        <img src="/assets/images/portfolio-1.webp" alt="Сайт отеля «Таёжник»" loading="lazy" width="420" height="420">
                                     </div>
                                     <div class="card-hover d-flex-end-start flex-column">
                                         <p class="hover-title">Эко-отель «Таёжник»</p>
@@ -1166,7 +1166,7 @@
                                 </a>
                                 <a href="#" class="4 link-action portfolio-card--tall" data-category="tour-operator">
                                     <div class="portfolio-card__img">
-                                        <img src="/assets/images/portfolio-4.webp" alt="Сайт туроператора «SOTRANS TRAVEL»" loading="lazy">
+                                        <img src="/assets/images/portfolio-4.webp" alt="Сайт туроператора «SOTRANS TRAVEL»" loading="lazy" width="744" height="1120">
                                     </div>
                                     <div class="card-hover d-flex-end-start flex-column">
                                         <p class="hover-title">«SOTRANS TRAVEL»</p>
@@ -1178,7 +1178,7 @@
                                 </a>
                                 <a href="#" class="2 link-action portfolio-card--tall" data-category="tour-operator">
                                     <div class="portfolio-card__img">
-                                        <img src="/assets/images/portfolio-2.webp" alt="Сайт туроператора «Alex Tour»" loading="lazy">
+                                        <img src="/assets/images/portfolio-2.webp" alt="Сайт туроператора «Alex Tour»" loading="lazy" width="744" height="1120">
                                     </div>
                                     <div class="card-hover d-flex-end-start flex-column">
                                         <p class="hover-title">«Alex Tour»</p>
@@ -1190,7 +1190,7 @@
                                 </a>
                                 <a href="#" class="5 link-action portfolio-card" data-category="tour-operator">
                                     <div class="portfolio-card__img">
-                                        <img src="/assets/images/portfolio-5.webp" alt="Сайт туроператора «Охота на рыбалку»" loading="lazy">
+                                        <img src="/assets/images/portfolio-5.webp" alt="Сайт туроператора «Охота на рыбалку»" loading="lazy" width="744" height="744">
                                     </div>
                                     <div class="card-hover d-flex-end-start flex-column">
                                         <p class="hover-title"> «Охота на рыбалку»</p>
@@ -1202,7 +1202,7 @@
                                 </a>
                                 <a href="#" class="3 link-action portfolio-card" data-category="travel-agency">
                                     <div class="portfolio-card__img">
-                                        <img src="/assets/images/portfolio-3.webp" alt="Сайт туристического агентства «Архитектур»" loading="lazy">
+                                        <img src="/assets/images/portfolio-3.webp" alt="Сайт туристического агентства «Архитектур»" loading="lazy" width="744" height="744">
                                     </div>
                                     <div class="card-hover d-flex-end-start flex-column">
                                         <p class="hover-title">«Архитектур»</p>
@@ -1214,7 +1214,7 @@
                                 </a>
                                 <a href="#" class="6 link-action portfolio-card--tall" data-category="tour-operator landing">
                                     <div class="portfolio-card__img">
-                                        <img src="/assets/images/portfolio-6.webp" alt="Сайт туроператора «SPb Ticket»" loading="lazy">
+                                        <img src="/assets/images/portfolio-6.webp" alt="Сайт туроператора «SPb Ticket»" loading="lazy" width="744" height="1120">
                                     </div>
                                     <div class="card-hover d-flex-end-start flex-column">
                                         <p class="hover-title">«SPb Ticket»</p>
@@ -1337,29 +1337,43 @@
                             </div>
                             <div class="col-12 col-xxl-7"><img class="offices__map" src="/assets/images/map.png" alt="Карта"></div>
                         </div>
-                        <div class="container">
-                            <div class="clients-slider__inner">
-                                <div class="clients-slider__header pos-relative">
-                                    <div class="swiper-button-prev clients-slider-prev arrow-prev  d-flex-center-center no-tap-highlight">
-                                        <svg class="icon" width="32" height="32">
-                                            <use href="/assets/icons/sprite.svg#icon-arrow"></use>
-                                        </svg>
-                                    </div>
-                                    <div class="swiper-button-next clients-slider-next arrow-next d-flex-center-center no-tap-highlight">
+                        <div class="clients-slider__inner">
+                            <div class="clients-slider__header pos-relative">
+                                <div class="swiper-button-prev clients-slider-prev arrow-prev  d-flex-center-center no-tap-highlight">
                                     <svg class="icon" width="32" height="32">
                                         <use href="/assets/icons/sprite.svg#icon-arrow"></use>
                                     </svg>
                                 </div>
-                                <div class="swiper-container clients-swiper">
-                                    <div class="swiper-wrapper">
+                                <div class="swiper-button-next clients-slider-next arrow-next d-flex-center-center no-tap-highlight">
+                                    <svg class="icon" width="32" height="32">
+                                        <use href="/assets/icons/sprite.svg#icon-arrow"></use>
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="swiper clients-slider">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide client-slide d-flex-center-center">
+                                        <img src="/assets/images/client1.png" alt="Клиент 1" width="150" height="100" />
+                                    </div>
+                                    <div class="swiper-slide client-slide d-flex-center-center">
+                                        <img src="/assets/images/client2.png" alt="Клиент 2" width="150" height="100" />
+                                    </div>
+                                    <div class="swiper-slide client-slide d-flex-center-center">
+                                        <img src="/assets/images/client3.png" alt="Клиент 3" width="150" height="100" />
+                                    </div>
+                                    <div class="swiper-slide client-slide d-flex-center-center">
+                                        <img src="/assets/images/client4.png" alt="Клиент 4" width="150" height="100" />
+                                    </div>
+                                    <div class="swiper-slide client-slide d-flex-center-center">
+                                        <img src="/assets/images/client5.png" alt="Клиент 5" width="150" height="100" />
+                                    </div>
+                                    <div class="swiper-slide client-slide d-flex-center-center">
+                                        <img src="/assets/images/client6.png" alt="Клиент 6" width="150" height="100" />
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ipsa ab rerum voluptatibus repudiandae iusto nostrum et unde. In illo, dolorum quos fuga molestias quasi modi vero est. Asperiores, accusantium!
-                    Provident odit quidem saepe et consequatur soluta, dignissimos veniam! Harum, quaerat nostrum voluptates hic impedit nemo deleniti beatae quibusdam animi, accusamus blanditiis id, atque recusandae? Eos quisquam pariatur officia aliquam.
-                    Inventore eos ex dolores eum nemo odio quaerat, asperiores ducimus et sint error officia deleniti soluta molestias! Necessitatibus esse velit, labore illo et laborum recusandae earum libero obcaecati, sunt aliquid.</p>
                 </div>
             </section>
             <!-- /Offices -->
