fix: clients-slider outline & loop

--- a/index.html
+++ b/index.html
@@ -1370,6 +1370,24 @@
                                     <div class="swiper-slide client-slide d-flex-center-center">
                                         <img src="/assets/images/client6.png" alt="Клиент 6" width="150" height="100" />
                                     </div>
+                                    <div class="swiper-slide client-slide d-flex-center-center">
+                                        <img src="/assets/images/client1.png" alt="Клиент 1" width="150" height="100" />
+                                    </div>
+                                    <div class="swiper-slide client-slide d-flex-center-center">
+                                        <img src="/assets/images/client2.png" alt="Клиент 2" width="150" height="100" />
+                                    </div>
+                                    <div class="swiper-slide client-slide d-flex-center-center">
+                                        <img src="/assets/images/client3.png" alt="Клиент 3" width="150" height="100" />
+                                    </div>
+                                    <div class="swiper-slide client-slide d-flex-center-center">
+                                        <img src="/assets/images/client4.png" alt="Клиент 4" width="150" height="100" />
+                                    </div>
+                                    <div class="swiper-slide client-slide d-flex-center-center">
+                                        <img src="/assets/images/client5.png" alt="Клиент 5" width="150" height="100" />
+                                    </div>
+                                    <div class="swiper-slide client-slide d-flex-center-center">
+                                        <img src="/assets/images/client6.png" alt="Клиент 6" width="150" height="100" />
+                                    </div>
                                 </div>
                             </div>
                         </div>
