style: fiz swiper-container

--- a/index.html
+++ b/index.html
@@ -1350,7 +1350,7 @@
                                     </svg>
                                 </div>
                             </div>
-                            <div class="swiper clients-slider">
+                            <div class="swiper-container clients-slider">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide client-slide d-flex-center-center">
                                         <img src="/assets/images/client1.png" alt="Клиент 1" width="150" height="100" />
