--- a/index.html
+++ b/index.html
@@ -906,37 +906,6 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <!-- <div class="swiper-slide">
-                                        <div class="row">
-                                            <div
-                                                class="slider__text-wrapper rg-1 d-flex flex-column align-items-start rg-1 col-12 col-md-7 col-lg-6 col-xl-8 text-body-wrapper"
-                                            >
-                                                <h2 class="title-primary">
-                                                    Сайт салона красоты
-                                                </h2>
-                                                <p class="text-body">
-                                                    Сильная структура для вывода
-                                                    сайта в&nbsp;Яндекс, все
-                                                    блоки нужные салону красоты
-                                                </p>
-                                                <a
-                                                    href="#"
-                                                    class="btn btn-primary no-select"
-                                                    >Подробнее</a
-                                                >
-                                            </div>
-                                            <div
-                                                class="slider__image-wrapper col-12 col-md-5 col-lg-6 col-xl-4 d-none d-md-block"
-                                            >
-                                                <img
-                                                    src="assets/images/slider/slider-beauty-salon.png"
-                                                    width="302px"
-                                                    height="380px"
-                                                    alt="Пример сайта"
-                                                />
-                                            </div>
-                                        </div>
-                                    </div> -->
                                     <div class="swiper-slide">
                                         <div class="row">
                                             <div
@@ -1001,40 +970,6 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <!-- <div class="swiper-slide">
-                                        <div class="row">
-                                            <div
-                                                class="slider__text-wrapper rg-1 d-flex flex-column align-items-start rg-1 col-12 col-md-7 col-lg-6 col-xl-8 text-body-wrapper"
-                                            >
-                                                <h2 class="title-primary">
-                                                    Сайт автосервиса
-                                                </h2>
-                                                <p class="text-body">
-                                                    Детально проработанная
-                                                    структура, чтобы выйти
-                                                    в&nbsp;Яндекс. Все
-                                                    необходимые разделы.
-                                                    Разворот под ключ
-                                                    за&nbsp;3&nbsp;недели!
-                                                </p>
-                                                <a
-                                                    href="#"
-                                                    class="btn btn-primary no-select"
-                                                    >Подробнее</a
-                                                >
-                                            </div>
-                                            <div
-                                                class="slider__image-wrapper col-12 col-md-5 col-lg-6 col-xl-4 d-none d-md-block"
-                                            >
-                                                <img
-                                                    src="assets/images/slider/slider-autoservice.png"
-                                                    width="302px"
-                                                    height="380px"
-                                                    alt="Пример сайта"
-                                                />
-                                            </div>
-                                        </div>
-                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -1325,7 +1260,7 @@
             </section>
             <!-- /Tariffs -->
             <!-- Offices -->
-            <section class="section__offices mb">
+            <section class="section__offices">
                 <div class="container">
                     <div class="offices-clients__wrap d-flex-between-start flex-column gap-20-40">
                         <div class="row offices__inner gap-20-40">
@@ -1395,6 +1330,56 @@
                 </div>
             </section>
             <!-- /Offices -->
+            <!-- Request-form -->
+            <section class="section__request-form pos-relative bg-accent mb">
+                <div class="request-form__outer pos-relative">
+                    <div class="request-form__spacer"></div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12 col-md-8 col-lg-6">
+                                <div class="request-form__wrap d-flex flex-column gap-5">
+                                    <div class="request-form__promo d-flex-between-start flex-column gap-2">
+                                        <h4 class="title-tertiary promo-title fw-600">Давайте работать вместе!</h4>
+                                        <p class="text-body promo-text">Закажите современный и функциональный сайт, который привлечёт больше клиентов и выделит ваш бизнес.</p>
+                                    </div>
+                                    <form
+                                        id="request-form"
+                                        class="request-form d-flex-between-start flex-column gap-14px"
+                                        action="#"
+                                        method="POST"
+                                    >
+                                        <div class="request-form-input">
+                                                <input
+                                                    type="text"
+                                                    id="name"
+                                                    name="name"
+                                                    required
+                                                    placeholder="Имя"
+                                                />
+                                        </div>
+                                        <div class="request-form-input">
+                                            <input
+                                                type="tel"
+                                                name="phone"
+                                                required
+                                                autocomplete="off"
+                                                placeholder="Телефон"
+                                            />
+                                        </div>
+                                        <button class="btn btn-secondary" type="submit">Отправить</button>
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="d-none d-md-block col-md-4 col-lg-6">
+                                <div class="request-form__image d-flex-start-end pos-relative">
+                                    <img src="/assets/images/request-phone.png" alt="Смартфон" class="request-img" width="323" height="643" loading="lazy"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- /Request-form -->
         </main>
         <!-- /Main -->
 
