feat: add reviews-tabs__switcher

--- a/ui.html
+++ b/ui.html
@@ -56,6 +56,18 @@
                     </button>
                     <span>.btn .btn-secondary .btn-tab</span>
                 </div>
+                <div class="d-flex align-items-center gap-2 mb-2">
+                    <button class="btn btn-secondary btn-link">
+                        Secondary Button Link
+                    </button>
+                    <span>.btn .btn-secondary .btn-link</span>
+                </div>
+                <div class="d-flex align-items-center gap-2 mb-2">
+                    <button class="btn btn-tab btn-link">
+                        Tab Button Link
+                    </button>
+                    <span>.btn .btn-tab .btn-link</span>
+                </div>
             </div>
         </section>
         <section class="mb-4">
