feat: add section__partners

--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,7 @@
                             <div class="portfolio-tabs__cards">
                                 <a href="#" class="1 link-action portfolio-card" data-category="hotel">
                                     <div class="portfolio-card__img">
-                                        <img src="/assets/images/portfolio-1.webp" alt="Сайт отеля «Таёжник»" loading="lazy" width="420" height="420">
+                                        <img src="/assets/images/portfolio-1.webp" alt="Сайт отеля «Таёжник»" loading="lazy" width="372" height="372">
                                     </div>
                                     <div class="card-hover d-flex-end-start flex-column">
                                         <p class="hover-title">Эко-отель «Таёжник»</p>
@@ -1101,7 +1101,7 @@
                                 </a>
                                 <a href="#" class="4 link-action portfolio-card--tall" data-category="tour-operator">
                                     <div class="portfolio-card__img">
-                                        <img src="/assets/images/portfolio-4.webp" alt="Сайт туроператора «SOTRANS TRAVEL»" loading="lazy" width="744" height="1120">
+                                        <img src="/assets/images/portfolio-4.webp" alt="Сайт туроператора «SOTRANS TRAVEL»" loading="lazy" width="372" height="560">
                                     </div>
                                     <div class="card-hover d-flex-end-start flex-column">
                                         <p class="hover-title">«SOTRANS TRAVEL»</p>
@@ -1113,7 +1113,7 @@
                                 </a>
                                 <a href="#" class="2 link-action portfolio-card--tall" data-category="tour-operator">
                                     <div class="portfolio-card__img">
-                                        <img src="/assets/images/portfolio-2.webp" alt="Сайт туроператора «Alex Tour»" loading="lazy" width="744" height="1120">
+                                        <img src="/assets/images/portfolio-2.webp" alt="Сайт туроператора «Alex Tour»" loading="lazy" width="372" height="560">
                                     </div>
                                     <div class="card-hover d-flex-end-start flex-column">
                                         <p class="hover-title">«Alex Tour»</p>
@@ -1125,7 +1125,7 @@
                                 </a>
                                 <a href="#" class="5 link-action portfolio-card" data-category="tour-operator">
                                     <div class="portfolio-card__img">
-                                        <img src="/assets/images/portfolio-5.webp" alt="Сайт туроператора «Охота на рыбалку»" loading="lazy" width="744" height="744">
+                                        <img src="/assets/images/portfolio-5.webp" alt="Сайт туроператора «Охота на рыбалку»" loading="lazy" width="372" height="372">
                                     </div>
                                     <div class="card-hover d-flex-end-start flex-column">
                                         <p class="hover-title"> «Охота на рыбалку»</p>
@@ -1137,7 +1137,7 @@
                                 </a>
                                 <a href="#" class="3 link-action portfolio-card" data-category="travel-agency">
                                     <div class="portfolio-card__img">
-                                        <img src="/assets/images/portfolio-3.webp" alt="Сайт туристического агентства «Архитектур»" loading="lazy" width="744" height="744">
+                                        <img src="/assets/images/portfolio-3.webp" alt="Сайт туристического агентства «Архитектур»" loading="lazy" width="372" height="372">
                                     </div>
                                     <div class="card-hover d-flex-end-start flex-column">
                                         <p class="hover-title">«Архитектур»</p>
@@ -1149,7 +1149,7 @@
                                 </a>
                                 <a href="#" class="6 link-action portfolio-card--tall" data-category="tour-operator landing">
                                     <div class="portfolio-card__img">
-                                        <img src="/assets/images/portfolio-6.webp" alt="Сайт туроператора «SPb Ticket»" loading="lazy" width="744" height="1120">
+                                        <img src="/assets/images/portfolio-6.webp" alt="Сайт туроператора «SPb Ticket»" loading="lazy" width="372" height="560">
                                     </div>
                                     <div class="card-hover d-flex-end-start flex-column">
                                         <p class="hover-title">«SPb Ticket»</p>
@@ -1372,7 +1372,7 @@
                             </div>
                             <div class="d-none d-md-block col-md-4 col-lg-6">
                                 <div class="request-form__image d-flex-start-end pos-relative">
-                                    <img src="/assets/images/request-phone.png" alt="Смартфон" class="request-img" width="323" height="643" loading="lazy"/>
+                                    <img src="/assets/images/request-phone.png" alt="Смартфон" class="request-img" width="161" height="321" loading="lazy"/>
                                 </div>
                             </div>
                         </div>
@@ -1419,7 +1419,7 @@
                                         </div>
                                     </div>
                                     <div class="review-img d-flex-center-center">
-                                        <img src="/assets/images/review-1.png" alt="Отзыв 1" width="186" height="260" />
+                                        <img src="/assets/images/review-1.png" alt="Отзыв 1" width="186" height="261" />
                                     </div>
                                 </div>
                                 <div class="swiper-slide review-slide d-flex gap-6">
@@ -1435,7 +1435,7 @@
                                         </div>
                                     </div>
                                     <div class="review-img d-flex-center-center">
-                                        <img src="/assets/images/review-1.png" alt="Отзыв 1" width="186" height="260" />
+                                        <img src="/assets/images/review-1.png" alt="Отзыв 1" width="186" height="261" />
                                     </div>
                                 </div>
                                 <div class="swiper-slide review-slide d-flex gap-6">
@@ -1451,7 +1451,7 @@
                                         </div>
                                     </div>
                                     <div class="review-img d-flex-center-center">
-                                        <img src="/assets/images/review-1.png" alt="Отзыв 1" width="186" height="260" />
+                                        <img src="/assets/images/review-1.png" alt="Отзыв 1" width="186" height="261" />
                                     </div>
                                 </div>
                             </div>
@@ -1460,6 +1460,77 @@
                 </div>
             </section>
             <!-- /Reviews -->
+            <!-- Partners -->
+            <section class="section__partners mb">
+                <div class="container">
+                    <div class="partners__header d-flex flex-column gap-6">
+                        <h2 class="title-secondary">Партнёр<span class="title-end"><span class="icon-title-decor"><svg class="icon icon--original" width="64" height="60"><use href="/assets/icons/sprite.svg#icon-title-decor"></use></svg></span></span>ы</h2>
+                        <div class="partners-slider__header pos-relative">
+                            <div class="swiper-button-prev partners-slider-prev arrow-prev  d-flex-center-center no-tap-highlight">
+                                <svg class="icon" width="32" height="32">
+                                    <use href="/assets/icons/sprite.svg#icon-arrow"></use>
+                                </svg>
+                            </div>
+                            <div class="swiper-button-next partners-slider-next arrow-next d-flex-center-center no-tap-highlight">
+                                <svg class="icon" width="32" height="32">
+                                    <use href="/assets/icons/sprite.svg#icon-arrow"></use>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="partners-bg bg-secondary">
+                    <div class="container">
+                        <div class="swiper-container partners-slider">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide partner-slide d-flex-center-center">
+                                    <img src="/assets/images/partner-1.png" alt="Партнер 1" width="81" height="32" />
+                                </div>
+                                <div class="swiper-slide partner-slide d-flex-center-center">
+                                    <img src="/assets/images/partner-2.png" alt="Партнер 2" width="87" height="32" />
+                                </div>
+                                <div class="swiper-slide partner-slide d-flex-center-center">
+                                    <img src="/assets/images/partner-3.png" alt="Партнер 3" width="71" height="32" />
+                                </div>
+                                <div class="swiper-slide partner-slide d-flex-center-center">
+                                    <img src="/assets/images/partner-4.png" alt="Партнер 4" width="85" height="32" />
+                                </div>
+                                <div class="swiper-slide partner-slide d-flex-center-center">
+                                    <img src="/assets/images/partner-5.png" alt="Партнер 5" width="96" height="32" />
+                                </div>
+                                <div class="swiper-slide partner-slide d-flex-center-center">
+                                    <img src="/assets/images/partner-6.png" alt="Партнер 6" width="67" height="32" />
+                                </div>
+                                <div class="swiper-slide partner-slide d-flex-center-center">
+                                    <img src="/assets/images/partner-7.png" alt="Партнер 7" width="164" height="32" />
+                                </div>
+                                <div class="swiper-slide partner-slide d-flex-center-center">
+                                    <img src="/assets/images/partner-1.png" alt="Партнер 1" width="81" height="32" />
+                                </div>
+                                <div class="swiper-slide partner-slide d-flex-center-center">
+                                    <img src="/assets/images/partner-2.png" alt="Партнер 2" width="87" height="32" />
+                                </div>
+                                <div class="swiper-slide partner-slide d-flex-center-center">
+                                    <img src="/assets/images/partner-3.png" alt="Партнер 3" width="71" height="32" />
+                                </div>
+                                <div class="swiper-slide partner-slide d-flex-center-center">
+                                    <img src="/assets/images/partner-4.png" alt="Партнер 4" width="85" height="32" />
+                                </div>
+                                <div class="swiper-slide partner-slide d-flex-center-center">
+                                    <img src="/assets/images/partner-5.png" alt="Партнер 5" width="96" height="32" />
+                                </div>
+                                <div class="swiper-slide partner-slide d-flex-center-center">
+                                    <img src="/assets/images/partner-6.png" alt="Партнер 6" width="67" height="32" />
+                                </div>
+                                <div class="swiper-slide partner-slide d-flex-center-center">
+                                    <img src="/assets/images/partner-7.png" alt="Партнер 7" width="164" height="32" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- /Partners -->
         </main>
         <!-- /Main -->
 
