fix: add no-x-scroll in function initGrowCircle

--- a/index.html
+++ b/index.html
@@ -1168,7 +1168,7 @@
             <!-- /Portfolio-->
             <!-- Spacer -->
             <section class="section__spacer mb">
-                <div class="spacer-inner">
+                <div class="spacer-inner pos-relative">
                     <div class="spacer-inner__grow-circle"></div>
                     <div class="spacer-inner__icon d-flex-center-center">
                         <svg class="icon icon-spacer-arrow" width="24" height="24"><use href="/assets/icons/sprite.svg#icon-arrow"></use>
@@ -1406,7 +1406,7 @@
                         </div>
                         <div class="swiper-container reviews-slider">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide review-slide d-flex gap-6">
+                                <div class="swiper-slide review-slide d-flex gap-6" data-category="dev">
                                     <div class="review__item d-flex gap-3">
                                         <svg class="icon icon-quote">
                                             <use href="/assets/icons/sprite.svg#icon-quote">
@@ -1422,23 +1422,7 @@
                                         <img src="/assets/images/review-1.png" alt="Отзыв 1" width="186" height="261" />
                                     </div>
                                 </div>
-                                <div class="swiper-slide review-slide d-flex gap-6">
-                                    <div class="review__item d-flex gap-3">
-                                        <svg class="icon icon-quote">
-                                            <use href="/assets/icons/sprite.svg#icon-quote">
-                                            </use>
-                                        </svg>
-                                        <div class="review-content d-flex flex-column gap-3">
-                                            <p class="review-text">Завершение работы над нашим сайтом близится к дате 21-й годовщины турфирмы.<br>Вне всяких сомнений, наш сайт себя оправдает в самое ближайшее время и даст новые возможности развивать бизнес в плодотворном сотрудничестве!<br>Семь Ветров — сплочённая воедино команда профессионалов, собранная воедино! У вас "ВСЕ ГЕНИАЛЬНОЕ — ПРОСТО!» Сердечное спасибо всей команде!
-                                            </p>
-                                            <p class="review-sign fw-600">Генеральный директор ООО «Белавиасервис» Рогова И.А.</p>
-                                        </div>
-                                    </div>
-                                    <div class="review-img d-flex-center-center">
-                                        <img src="/assets/images/review-1.png" alt="Отзыв 1" width="186" height="261" />
-                                    </div>
-                                </div>
-                                <div class="swiper-slide review-slide d-flex gap-6">
+                                <div class="swiper-slide review-slide d-flex gap-6" data-category="dev">
                                     <div class="review__item d-flex gap-3">
                                         <svg class="icon icon-quote">
                                             <use href="/assets/icons/sprite.svg#icon-quote">
